welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if(weekday=false ){return true}
                  ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if(weekday=false ){return true}
        ^